--- a/Content/website/templates/aboutme.html
+++ b/Content/website/templates/aboutme.html
@@ -4,69 +4,41 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-
-<style>
-    *{
-       margin:0px;
-       padding:0px;
-       box-sizing: border-box;
-       text-align: justify;
-       text-justify: inter-word;
-       color: black;
-       line-height: 1.5;
-       letter-spacing: 1px;
-    }
-   .wrapper{
-       min-height: 86vh;
-       width: 100%;
-       background-position: center;
-       background-repeat: no-repeat;
-       background-size: cover;
-   }
-   article h1{
-       font-size: 50px;
-       font-weight: 800;
-       text-transform: uppercase;
-   }
-   article h1:after{
-       content:"";
-       height:5px;
-       width:255px;
-       background-color: #fff;
-       display:block;
-       margin:auto
-   }
-   blockquote{
-       font-size: 20px;
-       margin-top: 30px;
-   }
-   </style>
     <!-- Start of page content -->
     <div class="wrapper">
         <div class="testimonial">
             <article>
                 <!-- Main heading -->
-                <h1>about me</h1>
+                <br>
+                <br>
+                <h1 class="center-justified-text">About Me</h1>
+            
                 
                 <!-- Profile image -->
-                <img src="https://cdn.discordapp.com/attachments/1022053536139329626/1144188408198086766/IMG_20230429_094306_265.jpg">
-                
+               <!-- Profile image -->
+<img src="https://cdn.discordapp.com/attachments/1022053536139329626/1144188408198086766/IMG_20230429_094306_265.jpg" alt="aboutmepicture" class="center-image">
+</style>
+
+            
                 <!-- Blockquote with a personal introduction -->
-                <blockquote>
-                    Hi I'm Euriel.A Newealand grown fillipino currently studying at Sancta Maria College as a year 13 student. 
+                <p class="center-justified-text"> Hi I'm Euriel.A Newealand grown fillipino currently studying at Sancta Maria College as a year 13 student. 
                     One of my passions is video editing and content creation especially within Adobe Premiere Pro. Thus I had 
                     decided to share my passion with others and allow others to show off their creativity to others aswell as
-                    learn how to create certain effects within their media
+                    learn how to create certain effects within their media</p>
+
+                    
                     <!-- ... More content ... -->
                 </blockquote>
                 
                 <!-- Author's name and description -->
-                <h5>Euriel Beltran</h5>
-                <p>Current Year 13 student attending Sancta Maria College as of 2023</p>
+                <h5 class="center-justified-text"></h5class>Euriel Beltran</h5>
+                <p class="center-justified-text">Current Year 13 student attending Sancta Maria College as of 2023</p>
             </article>
         </div>
     </div>
 </div>
+<br>
+
     <!-- End of page content -->
 
        <!-- Footer-->
