--- a/Content/website/templates/contact.html
+++ b/Content/website/templates/contact.html
@@ -54,24 +54,18 @@
         </div>
         <!-- Contact card for Phone Number -->
         <div class="contact-card">
-          <!-- Image for Phone Number -->
           <img src="https://w7.pngwing.com/pngs/759/922/png-transparent-telephone-logo-iphone-telephone-call-smartphone-phone-electronics-text-trademark.png"
                alt="phone_image">
-          <!-- Title for Phone Number -->
+          <!-- Title & description for Phone Number -->
           <h2>Phone Number</h2>
-          <!-- Description for Phone Number -->
           <p class="card-text">
-            Reach out to me through my personal phone number!
-          </p>
-          <!-- Displaying the phone number -->
+            Reach out to me through my personal phone number!</p>          
           <p class="phone-number">Call: +64221663891</p>
         </div>
       </div>
     </section>
-    <!-- Closing </body> tag -->
   </body>
 </html>
-<!-- Closing </div> tag for the content section -->
 </div>
 <!-- Footer -->
 <footer class="footer-custom py-4 mt-auto">
