--- a/Content/website/templates/posts_div.html
+++ b/Content/website/templates/posts_div.html
@@ -1,117 +1,143 @@
-<!--Uses base template's code for base HTML site-->
-{% extends "base.html" %}
-
-{% block title %}Home{% endblock %}
-
-{% block content %}
-  <!-- Header -->
-  <h1 align="center"></h1>
+<!--Uses base template's code for base html site-->
+<!--Displays and styles posts with information, allow liking and deletion of post, and comments-->
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
+  %}
+  <h1 align="center">{% block header %}Posts{% endblock %}</h1>
   <div id="posts">
-    <!-- Loop through posts and display each -->
+    <!--Posts-->
     {% for post in posts %}
-      <div class="card border-dark">
-        <!-- Profile image -->
-        <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.user.image_file) }}">
-        <div class="card-header d-flex justify-content-between align-items-center">
-          <a href="/posts/{{post.user.username}}">{{post.user.username}}</a>
-          <div>
-            <!-- Liking Information -->
-            <span id="likes-count-{{post.id}}">
-              {{ post.likes|length }}
-            </span> 
-            {% if user.id in post.likes|map(attribute="author")|list %}
-              <i class="fas fa-thumbs-up" id="like-button-{{post.id}}" onclick="like({post,id})"></i>
-            {% else %}
-              <i class="far fa-thumbs-up" id="like-button-{{post.id}}" onclick="like({post,id})"></i>
-            {% endif %}
-            {% if user.id == post.author %}
-              <!-- Dropdown for post actions (delete) -->
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown"></button>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="/delete-post/{{post.id}}" class="dropdown-item">Delete</a>
-                  </li>
-                </ul>
-              </div>
-            {% endif %}
+    <div class="card border-dark">
+      <!--Displays profile image-->
+      <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.user.image_file) }}">
+      <div class="card-header d-flex justify-content-between align-items-center">
+        <a href="/posts/{{post.user.username}}">{{post.user.username}}</a>
+        <div>
+          <!--Liking Information-->
+          <span id="likes-count-{{post.id}}">
+          {{ post.likes|length }}</span> 
+          {% if user.id in post.likes|map(attribute="author")|list %}
+          <i
+            class="fas fa-thumbs-up"
+            id="like-button-{{post.id}}"
+            onclick="like({{post.id}})"
+          ></i>
+          {% else %}
+          <i
+            class="far fa-thumbs-up"
+            id="like-button-{{post.id}}"
+            onclick="like({{post.id}})"
+          ></i>
+          {% endif %} {% if user.id == post.author %}
+          <div class="btn-group">
+            <button
+              type="button"
+              class="btn btn-sm btn-primary dropdown-toggle"
+              data-bs-toggle="dropdown"
+            ></button>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="/delete-post/{{post.id}}" class="dropdown-item"
+                  >Delete</a
+                >
+              </li>
+            </ul>
           </div>
+          {% endif %}
         </div>
-        <!-- Post content and comments -->
-        <div class="card-body">
-          <div class="card-text post-title">{{post.title}}</div>
-          <br />
-          <div class="card-text">{{post.text}}</div>
-          <br />
-          <!-- Collapsible comments section -->
-          <div class="collapse" id="comments-{{post.id}}">
-            <div class="card">
-              <div class="card-body" id="comments-expanded-{{post.id}}">
-                {% for comment in post.comments %}
-                  <!-- Display individual comment with user and delete option -->
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div>
-                      <a href="/posts/{{comment.user.username}}">{{comment.user.username}}</a>: {{comment.text}}
-                    </div>
-                    <div>
-                      <small class="text-muted">{{comment.date_created}}</small>
-                      {% if user.id == comment.author or user.id == post.author %}
-                        <!-- Dropdown for comment actions (delete) -->
-                        <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown"></button>
-                          <ul class="dropdown-menu">
-                            <li>
-                              <a href="/delete-comment/{{comment.id}}" class="dropdown-item">Delete</a>
-                            </li>
-                          </ul>
-                        </div>
-                      {% endif %}
-                    </div>
+      </div>
+      <!--Comments-->
+      <div class="card-body">
+        <div class="card-text post-title">{{post.title}}</div>
+        <br />
+        <div class="card-text">{{post.text}}</div>
+        <br />
+        <div class="collapse" id="comments-{{post.id}}">
+          <div class="card">
+            <div class="card-body" id="comments-expanded-{{post.id}}">
+              {% for comment in post.comments %}
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <a href="/posts/{{comment.user.username}}"
+                    >{{comment.user.username}}</a
+                  >: {{comment.text}}
+                </div>
+                <div>
+                  <small class="text-muted"> {{comment.date_created}}</small>
+                  <!--Deleting Comment-->
+                  {% if user.id == comment.author or user.id == post.author %}
+                  <div class="btn-group">
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-primary dropdown-toggle"
+                      data-bs-toggle="dropdown"
+                    ></button>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a
+                          href="/delete-comment/{{comment.id}}"
+                          class="dropdown-item"
+                          >Delete</a
+                        >
+                      </li>
+                    </ul>
                   </div>
-                {% endfor %}
+                  {% endif %}
+                </div>
               </div>
+              {% endfor %}
             </div>
           </div>
-          <!-- Toggle to view comments and comment form -->
-          <p class="card-text">
-            {% if post.comments|length > 0 %}
-              <a data-bs-toggle="collapse" href="#comments-{{post.id}}" role="button">
-                <small>View {{post.comments|length}} Comments</small>
-              </a>
-            {% else %}
-              <small class="text-muted">No Comments</small>
-            {% endif %}
-          </p>
-          <!-- Form to submit comments -->
-          <form class="input-group mb-3" method="POST" action="/create-comment/{{post.id}}">
-            <input type="text" id="text" name="text" class="form-control" placeholder="Comment something!" />
-            <button type="submit" class="btn btn-primary">Comment</button>
-          </form>
         </div>
-        <!-- Post footer -->
-        <div class="card-footer text-muted">{{post.date_created}}</div>
+        <p class="card-text">
+          {% if post.comments|length > 0 %}
+          <a data-bs-toggle="collapse" href="#comments-{{post.id}}" role="button">
+            <small>View {{post.comments|length}} Comments</small>
+          </a>
+          {% else %}
+          <small class="text-muted">No Comments</small>
+          {% endif %}
+        </p>
+        <form
+          class="input-group mb-3"
+          method="POST"
+          action="/create-comment/{{post.id}}"
+        >
+          <input
+            type="text"
+            id="text"
+            name="text"
+            class="form-control"
+            placeholder="Comment something!"
+          />
+          <button type="submit" class="btn btn-primary">Comment</button>
+        </form>
       </div>
-      <br >
-    {% endfor %}
-  </div>
-
-  <!-- Pagination for navigating between pages of posts -->
-  {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-    {% if page_num %}
-      {% if posts.page == page_num %}
-        <a class="btn btn-outline-info mb-4" href="{{ url_for('views.blog', page=page_num) }}">{{ page_num }}</a>
-      {% else %}  
-        <a class="btn btn-outline-info mb-4" href="{{ url_for('views.blog', page=page_num) }}">{{ page_num }}</a>
-      {% endif %}
-    {% else %}
-      ...
-    {% endif %}
-  {% endfor %}    
-
-  <!-- Footer section -->
-  {% block footer %}
-    <div align="center">
-      <a href="/create-post"><button type="button" class="btn btn-primary btn-lg">Create a Post</button></a>
+      <div class="card-footer text-muted">{{post.date_created}}</div>
     </div>
-  {% endblock %}
-{% endblock %}
+    <br/ > {% endfor %}
+  </div>
+  
+  <!--Allows scrolling between pages on blog posts-->
+  {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+  {% if page_num %}
+    {% if posts.page == page_num %}
+      <a class="btn btn-outline-info mb-4" href="{{ url_for('views.blog', page=page_num) }}">{{ page_num }}</a>
+    {% else %}  
+      <a class="btn btn-outline-info mb-4" href="{{ url_for('views.blog', page=page_num) }}">{{ page_num }}</a>
+    {% endif %}
+  {% else %}
+    ...
+  {% endif %}
+  {% endfor %}    
+  
+  
+  {% block footer %}
+  <div align="center">
+    <a href="/create-post"
+      ><button type="button" class="btn btn-primary btn-lg">
+        Create a Post
+      </button></a
+    >
+  </div>
+  {% endblock %} {% endblock %}
+  
