--- a/Content/website/templates/tutorials.html
+++ b/Content/website/templates/tutorials.html
@@ -1,20 +1,16 @@
+ <!-- Styling for the tutorials -->
+ <style>
+    .tutorial {
+        text-align: center;
+        
+    }
+</style>
 <!-- Extends code from base.html for a basic page -->
 {% extends "base.html" %}
 
 {% block title %}Premiere Pro Tutorials{% endblock %}
 
 {% block content %}
-    <!-- Styling for the tutorials -->
-    <style>
-        .tutorial {
-            text-align: center;
-        }
-        .header {
-            text-align: center;
-        }
-    </style>
-    <title>Premiere Pro Tutorials</title>
-
     <!-- Start of page content -->
     <body>
         <div class="container">
@@ -27,29 +23,29 @@
                 <div class="tutorial">
                     <br>
                     <br>
-                    <h2>Planning/Marking according to the beat</h2>
-                    <p>Learn how to plan your upcoming edit by creating markers according to the beat, to improve quality for viewers</p>
+                    <h2 class="center-justified-text">Planning/Marking according to the beat</h2>
+                    <p class="center-justified-text">Learn how to plan your upcoming edit by creating markers according to the beat, to improve quality for viewers</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/vUUbDXMWMRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 
                 <!-- Tutorial: Velocity -->
                 <div class="tutorial">
-                    <h2>Velocity</h2>
-                    <p>How to use twixtor and time remapping to slow down or speed up clips to match the previous marked beats.</p>
+                    <h2 class="center-justified-text">Velocity</h2>
+                    <p class="center-justified-text">How to use twixtor and time remapping to slow down or speed up clips to match the previous marked beats.</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/axtHRGE0KMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 
                 <!-- Tutorial: Effects -->
                 <div class="tutorial">
-                    <h2>Effects</h2>
-                    <p>Learn how to create effects to create emphasis on certain clips</p>
+                    <h2 class="center-justified-text">Effects</h2>
+                    <p class="center-justified-text">Learn how to create effects to create emphasis on certain clips</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/CUPcfHHbKQE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                                 
                 <!-- Tutorial: Plugins -->
                 <div class="tutorial">
-                    <h2>Plugins</h2>
-                    <p>Learn how to install plugins, and what certain plugins do</p>
+                    <h2 class="center-justified-text">Plugins</h2>
+                    <p class="center-justified-text">Learn how to install plugins, and what certain plugins do</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/93RMVIHQ-9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
