--- a/Content/website/templates/aboutme.html
+++ b/Content/website/templates/aboutme.html
@@ -11,6 +11,8 @@
                 <!-- Main heading -->
                 <br>
                 <br>
+                <br>
+                <br>
                 <h1 class="center-justified-text">About Me</h1>
             
                 
@@ -21,8 +23,8 @@
 
             
                 <!-- Blockquote with a personal introduction -->
-                <p class="center-justified-text"> Hi I'm Euriel.A Newealand grown fillipino currently studying at Sancta Maria College as a year 13 student. 
-                    One of my passions is video editing and content creation especially within Adobe Premiere Pro. Thus I had 
+                <p class="center-justified-text"> Hi I'm Euriel. A NewZealand grown fillipino currently studying at Sancta Maria College as a year 13 student. 
+                    One of my passions is video editing and content creation especially within Adobe Premiere Pro. Thus, I had 
                     decided to share my passion with others and allow others to show off their creativity to others aswell as
                     learn how to create certain effects within their media</p>
 
@@ -38,7 +40,11 @@
     </div>
 </div>
 <br>
-
+<br>
+<br>
+<br>
+<br>
+<br>
     <!-- End of page content -->
 
        <!-- Footer-->
