--- a/Content/website/templates/home.html
+++ b/Content/website/templates/home.html
@@ -135,7 +135,7 @@
                             <div class="card-body p-4">
                                 <!-- Badge for the category -->
                                 <div class="badge bg-primary bg-gradient rounded-pill mb-2">Premiere Pro</div>
-                                <a class="text-decoration-none link-dark stretched-link" href="#signup">
+                                <a class="text-decoration-none link-dark stretched-link" href="/tutorials">
                                     <!-- Tutorial title -->
                                     <h5 class="card-title mb-3">Velocity</h5>
                                 </a>
@@ -146,7 +146,6 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold">Euriel Beltran</div>
                                                 <div class="text-muted">March 12, 2023 &middot; 6 min read</div>
@@ -161,13 +160,12 @@
                                 <img cAlass="card-img-top" src="https://i.ytimg.com/vi/DDxwWatRqm0/maxresdefault.jpg" alt="..." />
                                 <div class="card-body p-4">
                                     <div class="badge bg-primary bg-gradient rounded-pill mb-2">Premiere Pro</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#tutorials"><h5 class="card-title mb-3">Effects</h5></a>
+                                    <a class="text-decoration-none link-dark stretched-link" href="/tutorials"><h5 class="card-title mb-3">Effects</h5></a>
                                     <p class="card-text mb-0">How to add adjustment layers, aswell as how to use adjustment layers to add VFX</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold">Euriel Beltran</div>
                                                 <div class="text-muted">March 23, 2023 &middot; 4 min read</div>
@@ -182,13 +180,12 @@
                                 <img class="card-img-top" src="https://images.squarespace-cdn.com/content/v1/56091db4e4b02efb26807ec0/1487167476029-ASXUB8K4BKMNR57GPVS0/markers-premiere-pro.jpg?format=1000w" alt="..." />
                                 <div class="card-body p-4">
                                     <div class="badge bg-primary bg-gradient rounded-pill mb-2">Premiere Pro</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#tutorials"><h5 class="card-title mb-3">Marking</h5></a>
+                                    <a class="text-decoration-none link-dark stretched-link" href="/tutorials"><h5 class="card-title mb-3">Marking</h5></a>
                                     <p class="card-text mb-0">Learn how to mark out music beats in order to create suspense to highlight important parts of the video</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold">Euriel Beltran</div>
                                                 <div class="text-muted">April 2, 2023 &middot; 10 min read</div>
