--- a/Content/website/templates/posts_div.html
+++ b/Content/website/templates/posts_div.html
@@ -36,9 +36,16 @@
             ></button>
             <ul class="dropdown-menu">
               <li>
-                <a href="/delete-post/{{post.id}}" class="dropdown-item"
-                  >Delete</a
-                >
+                <a href="/delete-post/{{post.id}}" 
+                class="dropdown-item"
+                >Delete
+                </a>
+              </li>
+              <li>
+                <a href="/update-post/{{post.id}}" 
+                class="dropdown-item"
+                >Update Post
+                </a>
               </li>
             </ul>
           </div>
