--- a/Content/website/templates/aboutme.html
+++ b/Content/website/templates/aboutme.html
@@ -17,28 +17,24 @@
             
                 
                 <!-- Profile image -->
-               <!-- Profile image -->
 <img src="https://cdn.discordapp.com/attachments/1022053536139329626/1144188408198086766/IMG_20230429_094306_265.jpg" alt="aboutmepicture" class="center-image">
 </style>
 
             
-                <!-- Blockquote with a personal introduction -->
-                <p class="center-justified-text"> Hi I'm Euriel. A NewZealand grown fillipino currently studying at Sancta Maria College as a year 13 student. 
+                <!-- Introudction -->
+                <p class="center-justified-text"> Hi I'm Euriel. A New Zealand grown fillipino currently studying at Sancta Maria College as a year 13 student. 
                     One of my passions is video editing and content creation especially within Adobe Premiere Pro. Thus, I had 
                     decided to share my passion with others and allow others to show off their creativity to others aswell as
                     learn how to create certain effects within their media</p>
 
-                    
-                    <!-- ... More content ... -->
-                </blockquote>
-                
-                <!-- Author's name and description -->
-                <h5 class="center-justified-text"></h5class>Euriel Beltran</h5>
+                <!-- Small Info  -->
+                <h5 class="center-justified-text">Euriel Beltran</h5>
                 <p class="center-justified-text">Current Year 13 student attending Sancta Maria College as of 2023</p>
             </article>
         </div>
     </div>
 </div>
+<!--breaks-->
 <br>
 <br>
 <br>
