--- a/Content/website/templates/posts_div.html
+++ b/Content/website/templates/posts_div.html
@@ -6,9 +6,9 @@
   <div id="posts">
     <!--Posts-->
     {% for post in posts %}
-    <div class="card border-dark">
+    <div class="card border-dark bg-dark">
       <!--Displays profile image-->
-      <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.user.image_file) }}">
+      <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.user.image_file) }}" alt="Profile Picture">
       <div class="card-header d-flex justify-content-between align-items-center">
         <a href="/posts/{{post.user.username}}">{{post.user.username}}</a>
         <div>
@@ -36,16 +36,12 @@
             ></button>
             <ul class="dropdown-menu">
               <li>
-                <a href="/delete-post/{{post.id}}" 
-                class="dropdown-item"
-                >Delete
-                </a>
+                <a href="/delete-post/{{post.id}}" class="dropdown-item"
+                  >Delete</a>
               </li>
               <li>
-                <a href="/update-post/{{post.id}}" 
-                class="dropdown-item"
-                >Update Post
-                </a>
+                <a href="/update-post/{{post.id}}" class="dropdown-item"
+                  >Update</a>
               </li>
             </ul>
           </div>
@@ -55,14 +51,14 @@
       <!--Comments-->
       <div class="card-body">
         <div class="card-text post-title">{{post.title}}</div>
-        <br />
-        <div class="card-text">{{post.text}}</div>
-        <br />
+        <br>
+        <div class="card-text bg-dark">{{post.text}}</div>
+        <br>
         <div class="collapse" id="comments-{{post.id}}">
-          <div class="card">
+          <div class="card bg-dark">
             <div class="card-body" id="comments-expanded-{{post.id}}">
               {% for comment in post.comments %}
-              <div class="d-flex justify-content-between align-items-center">
+              <div class="d-flex justify-content-between align-items-center bg-dark">
                 <div>
                   <a href="/posts/{{comment.user.username}}"
                     >{{comment.user.username}}</a
@@ -121,20 +117,20 @@
       </div>
       <div class="card-footer text-muted">{{post.date_created}}</div>
     </div>
-    <br/ > {% endfor %}
+    <br> {% endfor %}
   </div>
   
   <!--Allows scrolling between pages on blog posts-->
   {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-  {% if page_num %}
-    {% if posts.page == page_num %}
-      <a class="btn btn-outline-info mb-4" href="{{ url_for('views.blog', page=page_num) }}">{{ page_num }}</a>
-    {% else %}  
-      <a class="btn btn-outline-info mb-4" href="{{ url_for('views.blog', page=page_num) }}">{{ page_num }}</a>
+    {% if page_num %}
+      {% if posts.page == page_num %}
+        <a class="btn btn-outline-light mb-4" href="{{ url_for('views.blog', page=page_num) }}">{{ page_num }}</a>
+      {% else %}  
+        <a class="btn btn-outline-light mb-4" href="{{ url_for('views.blog', page=page_num) }}">{{ page_num }}</a>
+      {% endif %}
+    {% else %}
+      ...
     {% endif %}
-  {% else %}
-    ...
-  {% endif %}
   {% endfor %}    
   
   
@@ -146,5 +142,6 @@
       </button></a
     >
   </div>
+  <br>
   {% endblock %} {% endblock %}
   
