--- a/Content/website/templates/terms.html
+++ b/Content/website/templates/terms.html
@@ -5,59 +5,69 @@
 <br>
 <h1>Terms & Conditions</h1>
 <style>
-h1{
-    text-align: center;
-}
-h2{
-    text-align:center;
-}
-p{
-    text-align:center;
-}
 </style>
 <br>
 <br>
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>1. Acceptance of Terms</h2>
-    <p>By accessing and using this website, you agree to be bound by these terms and conditions...</p>
+    <h2 class="center-justified-text"1. Acceptance of Terms ></h2>
+    <p class="center-justified-text">By accessing and using this website, you agree to be bound by these terms and conditions...</p>
 </section>
 
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>2. Intellectual Property</h2>
-    <p>All content on this website, including text, graphics, logos, and images, is the property of Euriel Jaiden Beltran</p>
+    <h2 class="center-justified-text">2. Intellectual Property</h2>
+    <p class="center-justified-text">All content on this website, including text, graphics, logos, and images, is the property of Euriel Jaiden Beltran</p>
 </section>
+
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>3. User Representations</h2>
-    <p>Users will have to portray themselves through a digitalised account system</p>
+    <h2 class="center-justified-text">3. User Representations</h2>
+    <p class="center-justified-text">Users will have to portray themselves through a digitalised account system</p>
 </section>
+
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>4. Prohibited activities</h2>
-    <p>Activities such as unauthorized access, fraud, harassment, hate speech, doxing etc. Is prohibited</p>
+    <h2 class="center-justified-text">4. Prohibited activities</h2>
+    <p class="center-justified-text">Activities such as unauthorized access, fraud, harassment, hate speech, doxing etc. Is prohibited</p>
 </section>
+
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>5. User Generated Contributions</h2>
-    <p>Users will contribute content and or materials will shape the website and will be stored.</p>
+    <h2 class="center-justified-text">5. User Generated Contributions</h2>
+    <p class="center-justified-text">Users will contribute content and or materials will shape the website and will be stored.</p>
 </section>
+
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>6. Third Party Websites and Content</h2>
-    <p>Website will contain links and references to third party websites and content</p>
+    <h2 class="center-justified-text">6. Third Party Websites and Content</h2>
+    <p class="center-justified-text">Website will contain links and references to third party websites and content</p>
 </section>
+
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>7. Services Management</h2>
-    <p>Website is reliable, efficient due to the several plans and actions done behind the scene in order to provide a high quality experience</p>
+    <h2 class="center-justified-text">7. Services Management</h2>
+    <p class="center-justified-text">Website is reliable, efficient due to the several plans and actions done behind the scene in order to provide a high quality experience</p>
 </section>
+
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>8. Copyright Infringement </h2>
-    <p>Information within this website cannot be copied as it will lead to legal consequences.</p>
+    <h2 class="center-justified-text">8. Copyright Infringement </h2>
+    <p class="center-justified-text">Information within this website cannot be copied as it will lead to legal consequences.</p>
 </section>
+
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>9. Term and Termination</h2>
-    <p>If users fail to follow the terms given and provided user will be terminated access to this website.</p>
+    <h2 class="center-justified-text">9. Term and Termination</h2>
+    <p class="center-justified-text">If users fail to follow the terms given and provided user will be terminated access to this website.</p>
 </section>
+
+<!--header of specific term followed by short description of the term-->
 <section>
-    <h2>10. Modifications And Interruptions</h2>
-    <p>Website may temporarily be shutdown in case of modifactions to websites integrity or functionality.</p>
+    <h2 class="center-justified-text">10. Modifications And Interruptions</h2>
+    <p class="center-justified-text">Website may temporarily be shutdown in case of modifactions to websites integrity or functionality.</p>
 </section>
+
 </div>
     <!-- Footer-->  
     <footer class="footer-custom py-4 mt-auto">
