--- a/Content/website/templates/tutorials.html
+++ b/Content/website/templates/tutorials.html
@@ -25,22 +25,25 @@
                     <br>
                     <h2 class="center-justified-text">Planning/Marking according to the beat</h2>
                     <p class="center-justified-text">Learn how to plan your upcoming edit by creating markers according to the beat, to improve quality for viewers</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/vUUbDXMWMRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe class="youtube-video" width="560" height="615" src="https://www.youtube.com/embed/vUUbDXMWMRc"
+                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 
                 <!-- Tutorial: Velocity -->
                 <div class="tutorial">
                     <h2 class="center-justified-text">Velocity</h2>
                     <p class="center-justified-text">How to use twixtor and time remapping to slow down or speed up clips to match the previous marked beats.</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/axtHRGE0KMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe class="youtube-video" width="560" height="615" src="https://www.youtube.com/embed/axtHRGE0KMI"
+                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 
                 <!-- Tutorial: Effects -->
                 <div class="tutorial">
                     <h2 class="center-justified-text">Effects</h2>
                     <p class="center-justified-text">Learn how to create effects to create emphasis on certain clips</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/CUPcfHHbKQE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
+                    <iframe class="youtube-video" width="560" height="615" src="https://www.youtube.com/embed/CUPcfHHbKQE"
+                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>  
                                 
                 <!-- Tutorial: Plugins -->
                 <div class="tutorial">
