--- a/Content/website/templates/base.html
+++ b/Content/website/templates/base.html
@@ -20,7 +20,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-custom navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-custom navbar-dark fixed-top">
       <!--NavBar with burger dropdown-->  
       <div class="container-fluid">
         <button
