--- a/Content/website/templates/posts_div.html
+++ b/Content/website/templates/posts_div.html
@@ -6,7 +6,7 @@
   <div id="posts">
     <!--Posts-->
     {% for post in posts %}
-    <div class="card border-dark bg-dark">
+    <div class="card border-dark bg-blog">
       <!--Displays profile image-->
       <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.user.image_file) }}" alt="Profile Picture">
       <div class="card-header d-flex justify-content-between align-items-center">
@@ -52,13 +52,13 @@
       <div class="card-body">
         <div class="card-text post-title">{{post.title}}</div>
         <br>
-        <div class="card-text bg-dark">{{post.text}}</div>
+        <div class="card-text bg-blog">{{post.text}}</div>
         <br>
         <div class="collapse" id="comments-{{post.id}}">
-          <div class="card bg-dark">
+          <div class="card bg-blog">
             <div class="card-body" id="comments-expanded-{{post.id}}">
               {% for comment in post.comments %}
-              <div class="d-flex justify-content-between align-items-center bg-dark">
+              <div class="d-flex justify-content-between align-items-center bg-blog">
                 <div>
                   <a href="/posts/{{comment.user.username}}"
                     >{{comment.user.username}}</a
