--- a/Content/website/templates/terms.html
+++ b/Content/website/templates/terms.html
@@ -10,7 +10,7 @@
 <br>
 <!--header of specific term followed by short description of the term-->
 <section>
-    <h2 class="center-justified-text"1. Acceptance of Terms ></h2>
+    <h2 class="center-justified-text">1. Acceptance of Terms </h2>
     <p class="center-justified-text">By accessing and using this website, you agree to be bound by these terms and conditions...</p>
 </section>
 
